--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Ignore service account JSON file
+skilful-webbing-431309-e2-1b091b6a9917.json
+skilful-webbing-431309-e2-11a6741c682d.json
