--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,5 @@ yarn-error.log*
 next-env.d.ts
 
 # Ignore service account JSON file
-skilful-webbing-431309-e2-1b091b6a9917.json
-skilful-webbing-431309-e2-11a6741c682d.json
+skilful-webbing-431309-e2-1b091b6a9917
+skilful-webbing-431309-e2-11a6741c682d
