--- a/package.json
+++ b/package.json
@@ -7,22 +7,23 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cy:open": "cypress open"
+    "cypress": "cypress open"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^14.2.7",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "axios": "^1.7.5",
+    "axios": "^1.7.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "googleapis": "^142.0.0",
-    "lucide-react": "^0.428.0",
+    "imagekitio-next": "^1.0.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "next-view-transitions": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
