--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@next/bundle-analyzer": "^14.2.7",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.6",
     "class-variance-authority": "^0.7.0",
@@ -20,6 +21,7 @@
     "cmdk": "^1.0.0",
     "googleapis": "^142.0.0",
     "imagekitio-next": "^1.0.0",
+    "lucide-react": "^0.485.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "next-view-transitions": "^0.3.0",
