--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.8",
+    "antd": "^5.24.8",
     "axios": "^1.7.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -28,6 +30,7 @@
     "next-view-transitions": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
