--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.18.0",
     "@hookform/resolvers": "^5.0.1",
     "@next/bundle-analyzer": "^14.2.7",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -26,7 +27,7 @@
     "googleapis": "^142.0.0",
     "imagekitio-next": "^1.0.0",
     "lucide-react": "^0.485.0",
-    "next": "14.2.5",
+    "next": "^14.2.25",
     "next-themes": "^0.3.0",
     "next-view-transitions": "^0.3.0",
     "react": "^18",
