--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.8",
+    "@react-google-maps/api": "^2.20.6",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
     "antd": "^5.24.8",
     "axios": "^1.7.6",
     "class-variance-authority": "^0.7.0",
