--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@radix-ui/react-tabs": "^1.1.8",
     "@react-google-maps/api": "^2.20.6",
     "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.49.4",
+    "@supabase/supabase-js": "^2.49.8",
     "antd": "^5.24.8",
     "axios": "^1.7.6",
     "class-variance-authority": "^0.7.0",
@@ -37,6 +37,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.56.1",
     "recharts": "^2.15.3",
+    "svix": "^1.66.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.3"
