--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.18.0",
     "@hookform/resolvers": "^5.0.1",
+    "@imagekit/next": "^2.1.2",
     "@next/bundle-analyzer": "^14.2.7",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
@@ -28,6 +29,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "googleapis": "^142.0.0",
+    "imagekit": "^6.0.0",
     "imagekitio-next": "^1.0.0",
     "lucide-react": "^0.485.0",
     "next": "^14.2.25",
