--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-google-maps/api": "^2.20.6",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.8",
+    "@tanstack/react-query": "^5.80.2",
+    "@tanstack/react-query-devtools": "^5.80.2",
     "antd": "^5.24.8",
     "axios": "^1.7.6",
     "class-variance-authority": "^0.7.0",
@@ -45,6 +47,7 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.78.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
