--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.56.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "svix": "^1.66.0",
     "tailwind-merge": "^2.5.2",
