--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@imagekit/next": "^2.1.2",
     "@next/bundle-analyzer": "^14.2.7",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-select": "^2.1.7",
@@ -25,7 +26,7 @@
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.80.2",
     "@tanstack/react-query-devtools": "^5.80.2",
-    "antd": "^5.24.8",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.7.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
