feat: change pkg manager npm to pnpm

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -32,11 +32,11 @@
     "imagekit": "^6.0.0",
     "imagekitio-next": "^1.0.0",
     "lucide-react": "^0.485.0",
-    "next": "^14.2.25",
+    "next": "^15.3.3",
     "next-themes": "^0.3.0",
     "next-view-transitions": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.1",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
@@ -45,11 +45,12 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "cypress": "^13.13.3",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint": "^9.29.0",
+    "eslint-config-next": "^15.3.3",
     "husky": "^9.1.7",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
